--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,14 @@
-<h1>hello world!!!</h1>
+<!doctype html>
+<html ng-app="calendarApp">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="Number8 Calendar test">
+    <title>Number8</title>
+</head>
+<body class="lang-eng">
+    <div ui-view></div>
+<script type="text/javascript" src="/dist/manifest.7683163638798aa7931f.js"></script><script type="text/javascript" src="/dist/vendor.7683163638798aa7931f.js"></script><script type="text/javascript" src="/dist/main.7683163638798aa7931f.js"></script></body>
+</html>
+  
