adding main route and views for directives

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="Number8 Calendar test">
     <title>Number8</title>
-</head>
+<link href="/dist/styles.css" rel="stylesheet"></head>
 <body class="lang-eng">
     <div ui-view></div>
-<script type="text/javascript" src="/dist/manifest.7683163638798aa7931f.js"></script><script type="text/javascript" src="/dist/vendor.7683163638798aa7931f.js"></script><script type="text/javascript" src="/dist/main.7683163638798aa7931f.js"></script></body>
+<script type="text/javascript" src="/dist/manifest.381cf2751be2aa6cf752.js"></script><script type="text/javascript" src="/dist/vendor.381cf2751be2aa6cf752.js"></script><script type="text/javascript" src="/dist/main.381cf2751be2aa6cf752.js"></script></body>
 </html>
   
