--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,35 @@
 <h1>Calendar picker</h1>
-<input type="date" name="date" required>
-<input type="number" name="number" required>
-<input type="text" name="code" required>
+<input type="date" name="date" ng-model="main.date" required>
+<input type="number" name="number" ng-model="main.number" required>
+<input type="text" name="code" ng-model="main.code" required >
+<button ng-click="main.renderCalendar()">Go</button>
+
+<div class="featurette" id="about">
+    <div class="span12">
+        <table class="table-condensed table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th colspan="7">
+                        <span class="btn-group">
+                	<p style="margin-left: 48px;">February 2012</p>
+                </span>
+                    </th>
+                </tr>
+                <tr>
+                    <th>Su</th>
+                    <th>Mo</th>
+                    <th>Tu</th>
+                    <th>We</th>
+                    <th>Th</th>
+                    <th>Fr</th>
+                    <th>Sa</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="week in main.initMonth">
+                    <td ng-repeat="day in week track by $index">{{day >= main.date.getDate() ? day : ' '}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
