--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -6,6 +6,15 @@ body {
     background-color: #f9f9f9;
 }
 
+.weekend {
+    background-color: yellow;
+}
+.weekday {
+    background-color: green;
+}
+.holiday {
+    background-color: orange;
+}
 
 /*REQUIRED*/
 
