--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -13,7 +13,7 @@ body {
     background-color: green;
 }
 .holiday {
-    background-color: orange;
+    background-color: orange !important;
 }
 
 /*REQUIRED*/
