--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<h1>Calendar picker</h1>
+<h1>Calendar picker V2</h1>
 <input type="date" name="date" ng-model="main.date" required>
 <input type="number" name="number" ng-model="main.number" required>
 <input type="text" name="code" ng-model="main.code" required >
