--- a/app/views/main.html
+++ b/app/views/main.html
@@ -74,3 +74,8 @@
 <div ng-if="main.error">
 	<h3>{{main.error}}</h3>
 </div>
+<br>
+<br>
+<br>
+<br>
+<a href="https://number8-test.appspot.com">Go back to V1 :(</a>
